fix: aligns fixed, need to align it with the drawer

--- a/src/styles/Cards-frame_style.scss
+++ b/src/styles/Cards-frame_style.scss
@@ -5,6 +5,7 @@
   width: 100%;
   justify-content: start;
   margin-bottom: 24px;
+  padding-bottom: 24px; // Add some bottom padding for better scrolling
   
   &::-webkit-scrollbar {
     width: 6px;
