--- a/src/styles/Pagination_style.scss
+++ b/src/styles/Pagination_style.scss
@@ -6,8 +6,7 @@
   background: var(--Dark-Primary-Buttons-White, #FFF);
   border: 1px solid var(--Gray-Colors-Gray-10, #EBECF2);
   border-radius: 8px;
-  margin-top: 24px;
-  flex-shrink: 0;
+  margin: 24px 0;
   
     &__info {
       font-size: 0.875rem;
