--- a/src/styles/main_style.scss
+++ b/src/styles/main_style.scss
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@500&display=swap');
 
 .app {
+  margin: 0;
+  padding: 0;
+  height: 100%;
   display: flex;
   min-height: 100vh;
   font-family: 'cairo';
@@ -26,6 +29,20 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  min-height: 100vh;
+  font-family: 'Cairo', sans-serif;
+  background-color: #f3f4f6;
+
+  &__container{
+    width: 100%;
+  }
+
+  &__content {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
 
   &__content-wrapper {
     flex: 1;
@@ -55,20 +72,19 @@
 
 // Add media queries for responsiveness
 @media (max-width: 1120px) {
-  .landing-page__content-wrapper {
+  .landing-page__content {
     max-width: 816px;
   }
 }
 
 @media (max-width: 840px) {
-  .landing-page__content-wrapper {
+  .landing-page__content {
     max-width: 544px;
   }
 }
 
 @media (max-width: 568px) {
-  .landing-page__content-wrapper {
+  .landing-page__content {
     max-width: 272px;
   }
 }
-
